# AIOPS-Platform

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci-cd.yml
backend/ai_reasoning/: __init__.py
backend/ai_reasoning/agents/: __init__.py  base.py  coordinator.py  log_analysis.py  metrics_analysis.py  remediation.py  root_cause.py
backend/ai_reasoning/workflows/: incident_investigation.py
backend/anomaly_detection/: __init__.py
backend/api_gateway/: main.py
backend/api_gateway/middleware/: rate_limiter.py
backend/api_gateway/routes/: __init__.py  analytics.py  auth.py  github.py  incidents.py  logs.py  metrics.py  rca.py
backend/event_correlation/: __init__.py
backend/github_automation/: __init__.py
backend/knowledge_graph/: __init__.py
backend/notification_service/: __init__.py
backend/shared/config/: __init__.py
backend/shared/database/: __init__.py
backend/shared/models/: __init__.py
backend/shared/schemas/: __init__.py
backend/shared/security/: __init__.py
docs/api/: README.md
docs/architecture/: README.md
docs/guides/: developer.md  production.md
frontend/: package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
infra/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
infra/helm/aiops-platform/: Chart.yaml  values.yaml
infra/kubernetes/base/: api-gateway.yaml  (+2 more)
infra/terraform/: main.tf
monitoring/prometheus/: prometheus.yml
tests/integration/: __init__.py
tests/load/: locustfile.py
(+8 files in other folders)
