[project]
name = "aiops-platform"
version = "1.0.0"
description = "Enterprise-grade Autonomous AI Operations Engineer"
requires-python = ">=3.12"

[tool.poetry]
name = "aiops-platform"
version = "1.0.0"
description = "AIOps Platform"
authors = ["AIOps Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.35"
alembic = "^1.14.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
redis = "^5.2.0"
aio-pika = "^9.4.0"
neo4j = "^5.26.0"
qdrant-client = "^1.12.0"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
scikit-learn = "^1.5.0"
numpy = "^2.1.0"
pandas = "^2.2.0"
scipy = "^1.14.0"
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
httpx = "^0.28.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
minio = "^7.2.0"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
locust = "^2.31.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
